--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@
 
 # theme                  : "minimal-mistakes-jekyll"
 remote_theme           : "mmistakes/minimal-mistakes@4.15.2"
-minimal_mistakes_skin    : "mint" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise", "default"
+minimal_mistakes_skin    : "air" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise", "default"
 
 # Site Settings
 locale                   : "en-US"
@@ -20,11 +20,11 @@ title                    : "Adam Reynolds - Portfolio"
 title_separator          : "-"
 name                     : "Adam Reynolds"
 description              : "An amazing website."
-url                      : "https://reynolds-adam.github.io"# the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://reynolds-adam.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+logo                     : "/assets/images/ar_logo.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
@@ -109,8 +109,8 @@ author:
   name             : "Adam Reynolds"
   avatar           : "/assets/images/headshot1.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Welcome to my portfolio"
-  location         : "Somewhere"
-  email            :
+  location         : "SLC, UT"
+  email            : "adamreynolds89@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
