--- a/_config.yml
+++ b/_config.yml
@@ -121,7 +121,7 @@ author:
       icon: "fab fa-fw fa-twitter-square"
       # url: "https://twitter.com/"
     - label: "Linkedin"
-      icon: "fab fa-fw fa-linkedin-square"
+      icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/adamreynolds89/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
@@ -146,7 +146,7 @@ footer:
       icon: "fab fa-fw fa-gitlab"
       # url:
     - label: "Linkedin"
-      icon: "fab fa-fw fa-linkedin-square"
+      icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/adamreynolds89/"
   
 
