--- a/_config.yml
+++ b/_config.yml
@@ -111,9 +111,9 @@ author:
   location         : "SLC, UT"
   email            : "adamreynolds89@gmail.com"
   links:
-    - label: "Email"
-      icon: "fas fa-fw fa-envelope-square"
-      url: mailto:adamreynolds89@gmail
+    #- label: "Email"
+     # icon: "fas fa-fw fa-envelope-square"
+     # url: mailto:adamreynolds89@gmail
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
