--- a/_config.yml
+++ b/_config.yml
@@ -97,9 +97,9 @@ social:
 
 # Analytics
 analytics:
-  provider               : false # false (default), "google", "google-universal", "custom"
+  provider               : "google"
   google:
-    tracking_id          :
+    tracking_id          : UA-115753690-2
     anonymize_ip         : # true, false (default)
 
 
