--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "Adam Reynolds"
 title_separator          : "-"
 name                     : "Adam Reynolds"
 description              : "An amazing website."
-url                      : "https://reynolds-adam.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://www.adamreynoldsdata.com" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "reynolds-adam/reynolds-adam.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
