--- a/_config.yml
+++ b/_config.yml
@@ -212,7 +212,9 @@ collections:
   notes:
     output: true
     permalink: /:collection/:path/
-
+  blog:
+    output: true
+    permalink: /:collection/:path/
   
   # Sass/SCSS
 sass:
