--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,15 @@
 # main links
 main:
-  - title: "About"
-    url: /about/
-    description: "A few details about me"
+
   - title: "Projects"
     url: /projects/
     description: "Some things I've worked on"
+  - title: "Blog"
+    url: /blog/
+    description: "My Data Science Blog"
+  - title: "About"
+    url: /about/
+    description: "A few details about me"
   - title: "Notes"
     url: /notes/
     description: "Data Science Notes"
