--- a/_config.yml
+++ b/_config.yml
@@ -212,7 +212,7 @@ collections:
   notes:
     output: true
     permalink: /:collection/:path/
-  blog:
+  projects:
     output: true
     permalink: /:collection/:path/
   
