--- a/_config.yml
+++ b/_config.yml
@@ -308,3 +308,12 @@ defaults:
       author_profile: false
       share: true
       comments: true
+  # _projects
+  - scope:
+      path: ""
+      type: projects
+    values:
+      layout: single
+      author_profile: false
+      share: true
+      comments: true
