--- a/_config.yml
+++ b/_config.yml
@@ -212,9 +212,9 @@ collections:
   notes:
     output: true
     permalink: /:collection/:path/
-  projects:
-    output: true
-    permalink: /:collection/:path/
+  # projects:
+  #   output: true
+  #   permalink: /:collection/:path/
   
   # Sass/SCSS
 sass:
@@ -309,11 +309,11 @@ defaults:
       share: true
       comments: true
   # _projects
-  - scope:
-      path: ""
-      type: projects
-    values:
-      layout: single
-      author_profile: false
-      share: true
-      comments: true
+  # - scope:
+  #     path: ""
+  #     type: projects
+  #   values:
+  #     layout: single
+  #     author_profile: false
+  #     share: true
+  #     comments: true
