--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ url                      : "https://www.adamreynoldsdata.com" # the base hostnam
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "reynolds-adam/reynolds-adam.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : "/assets/images/ar_logo2.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+logo                     : "/assets/images/site/ar_logo2.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
@@ -106,7 +106,7 @@ analytics:
 # Site Author
 author:
   name             : "Adam Reynolds"
-  avatar           : "/assets/images/headshot1.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/site/headshot1.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Data Scientist"
   location         : "SLC, UT"
   email            : "adamreynoldsdata@gmail.com"
